Issue #23099: Closing io.BytesIO with exported buffer is rejected now to prevent corrupting exported buffer.